--- a/css/style.css
+++ b/css/style.css
@@ -316,58 +316,80 @@ body .alignleft_icon {
 }
 
 body .alignleft_action {
-	float:left;
-	margin:5px 5px 0 45px;
+	float: left;
+	margin: 5px 5px 0 45px;
 	padding: 5px 15px 0 0;
 	display: block;	
 }
 
 /* Styling for Model Info Table */
-html {margin: 0;}
-body {margin: 0;}
-			
-.cinfo
-{
-	width:350px;
-	border-bottom: 1px solid #DEDEDE;
-	padding:2px 10px 2px 10px;
-	margin-bottom:10px;
-				
+
+html {
+	margin: 0;
+	overflow: hidden;
+	height: 100%
+}
+
+body {
+	margin: 0;
+	height: 100%;
+	overflow: auto;
 }
 			
-.cinfo table {width:100%;}
-.cinfo tr {text-align:left;vertical-align:top;}
-.cinfo tr td {padding-top: 10px;}
-.cinfo tr th {font-family:Arial, Helvetica, sans-serif;font-weight: normal;padding-top: 10px;}
-.cinfo tr td  select{padding: 5px;}
+.cinfo {
+	width: 350px;
+	border-bottom: 1px solid #DEDEDE;
+	padding: 2px 10px 2px 10px;
+	margin-bottom: 10px;			
+}
+			
+.cinfo table { width:100%; }
+
+.cinfo tr { 
+	text-align: left;
+	vertical-align: top; 
+}
+
+.cinfo tr td { padding-top: 10px; }
+
+.cinfo tr th { 
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	padding-top: 10px;
+}
+
+.cinfo tr td  select{ padding: 5px; }
             
-#statswrap
-{
-	display:inline-block;
-	vertical-align:top;
+#statswrap {
+	display: inline-block;
+	vertical-align: top;
 	-webkit-transition: width 1.5s;
 	transition: width 1.5s;
-	overflow:hidden;
+	overflow: hidden;
 }
 			
-.cbar
-{
-	width:20px;
-	height:20px;
-	display:inline-block;
-	cursor:pointer;
-	border:2px solid transparent;
+.cbar {
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+	cursor: pointer;
+	border: 2px solid transparent;
 }
 			
-.cact {margin-bottom:5px;}
-.cact span {border-bottom: 1px dotted #fcfcfc;color:#fcfcfc;cursor:pointer;}
+.cact { margin-bottom: 5px; }
+
+.cact span { 
+	border-bottom: 1px dotted #fcfcfc;
+	color: #fcfcfc;
+	cursor: pointer; 
+}
 			
-.vslink
-{
-	position:absolute;
-	bottom:0px;right:1px;
-	font:10px Arial;color:#555555;
-	text-decoration:none;
+.vslink {
+	position: absolute;
+	bottom: 0px; right:1px;
+	font: 10px Arial; 
+	color: #555555;
+	text-decoration: none;
 }
 
 /************************************************************************
@@ -377,23 +399,23 @@ body {margin: 0;}
 /*** CHECKLIST ***/
 
 ul.checklist { 
-	list-style:none !important; 
-	margin-left:0px;
+	list-style: none !important; 
+	margin-left: 0px;
 	line-height: 22px; 
-	}
+}
 
 ul.checklist li { 
 	background: url(../images/check.png) no-repeat; 
-	background-position:0px 6px; 
-	padding-left:24px; 
+	background-position: 0px 6px; 
+	padding-left: 24px; 
 }
 
-.margin { margin-top: 25px;}
-.margin-1 { margin-top: 30px;}
-.margin-2 { margin: 5px 0 5px 0;}
+.margin { margin-top: 25px; }
+.margin-1 { margin-top: 30px; }
+.margin-2 { margin: 5px 0 5px 0; } 
 
 .margin_right { margin-right: 10px; }
 
-.left { float: left; }
+.left { float:left; }
 
-.right { float: right; }
+.right { float:right; }
